--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.4.0",
         "bootstrap": "^5.2.3"
     }
 }
